--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
+        <label for="username-login">username:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
@@ -16,17 +16,14 @@
       </div>
     </form>
   </div>
+
   <div class="col-md-6">
     <h2>Signup</h2>
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
+        <label for="userame-signup">username:</label>
         <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
