--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,13 +13,14 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="money">💻</span>
+        <span role="img" aria-label="computer">💻</span>
         <a href="/">webDev Blog</a>
       </h1>
-      <nav>
+      <nav class="navbar">
+        <a href="/">Home</a>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
+        <a href="/profile">Dashboard</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
