--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,14 +1,25 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
+  <h2>{{title}}</h2>  
   <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  {{!-- <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p> --}}
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
+  <p>Created by {{user.username}} on {{format_date date_created}}</p>
+<div>
+
+<div>
+  {{#if logged_in}}
+  <form class="new-comment-form" data-projectid={{id}}>
+    <div>
+      <textarea class="comment-entry" id="comment_description" name="entry"></textarea>
+    </div>
+    <div>
+      <button class="button" type="submit">Add Comment</button>
+    </div>
+  </form>
+
+  {{/if}}
 </div>
+
+  {{#each comments as |comment|}}
+  <div style="border-style: solid;">
+    <p>{{comment.comment_description}}</p>
+  </div>
+  {{/each}}
