--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -11,7 +11,7 @@
       <textarea class="comment-entry" id="comment_description" name="entry"></textarea>
     </div>
     <div>
-      <button class="button" type="submit">Add Comment</button>
+      <button class="submit-btn" type="submit">Add Comment</button>
     </div>
   </form>
 
@@ -19,7 +19,12 @@
 </div>
 
   {{#each comments as |comment|}}
-  <div style="border-style: solid;">
-    <p>{{comment.comment_description}}</p>
+  <div class="single-comment">
+    <p>{{comment_description}}</p>
+    <p>Created by {{user.username}} on {{format_date date_created}}</p>
   </div>
+<button class="delete-btn" type="submit">Delete Comment</button>
   {{/each}}
+
+<script src="/js/profile.js"></script>
+<script src="/js/comment.js"></script>
