--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,31 @@
-header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
 }
 
+h1 {
+  margin-top: 0;
+  margin-bottom: 40px;
+  margin-left: 10%;
+}
+
+h1 a, h2, a, h3 {
+  color: #1b89bc;
+}
+
+.navbar h1 {
+  margin-top: 0px;
+}
+
+h1 a:hover {
+  color: black;
+}
+
+h2:hover, a:hover {
+  color: white;
+} 
+
+/* NAVBAR-------------------------- */
 .no-button {
   background: none;
   border: none;
@@ -12,13 +36,204 @@ header, .project:not(:last-child) {
   font-size: 100%;
 }
 
-.no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
+.navbar {
+  margin-left: 10%;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
+.navbar a, .no-button {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  /* justify-content: flex-start; */
+  justify-content: space-around;
+  margin-right: 10px;
+  font-weight: 700;
+  color: #1b89bc;
+}
+
+.navbar a:hover, .no-button:hover {
+  color:black;
+  text-decoration: none;
+}
+
+h1:hover {
+  color: black;
+  text-decoration: none;
+}
+
+/* HOME PAGE-------------------- */
+.card {
+  background-color: lightblue;
+  width: 80%;
+  margin-left: 10%;
+}
+
+.header {
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  background-color: rgb(26, 26, 84);
+  color: white;
+}
+
+.header h2 {
+  justify-content: start;
+  margin-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 24px;
+  color: #1b89bc;
+  text-decoration: none;
+}
+
+.header p {
+  text-align: end;
+  padding-top: 3px;
+  margin-right: 3px;
+  margin-right: 10%;
+}
+
+.footer p {
+  margin-left: 3%;
+  margin-right: 3%;
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+/* SINGLE PROJECT PAGE------------------ */
+.card-project{
+  background-color: lightblue;
+  width: 60%;
+  grid-template-columns: 1fr;
+  margin-bottom: 10px;
+  margin-left: 20%;
+}
+
+
+/* SINGLE PROJECT PAGE------------------ */
+.header-project {
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  background-color: rgb(26, 26, 84);
+  color: white;
+}
+
+.header-project h2, .header h2  {
+  justify-content: start;
+  color: #1b89bc;
+  margin-left: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  font-size: 24px;
+  margin-left: 5%;
+}
+
+h2:hover {
+  text-decoration: none;
+}
+
+.header-project p {
+  text-align: end;
+  padding-top: 8px;
+  margin-right: 10%;
+}
+
+p {
+  margin-left: 3%;
+  padding-bottom: 20px;
+} 
+
+.new-comment-form {
+  margin-left: 2.5%;
+}
+
+.comment-entry {
+  width: 95%;
+  align-content: center;
+  height: 60px;
+}
+
+.submit-btn {
+  width: 95%;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  justify-content: center;
+  padding: 10px;
+}
+
+/* LOGIN PAGE--------------- */
+.container-login {
+  max-width: 50%;
+  background-color:  lightblue;
+  margin-left: 25%;
+  margin-bottom: 40px;
+}
+
+.header-login{
+  width: 100%;
+  background-color: rgb(26, 26, 84);
+}
+
+.header-login h3{
+  margin-left: 5%;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-size: 24px;
+}
+
+.form-group{
+  margin-top: 5px;
+  margin-left: 10%;
+  padding: 6px;
+  font-size: 18px;
+}
+
+.form-input {
+  width: 80%;
+  height: 28px;
+  margin-top: 5px;
+  /* margin-left: 10%; */
+}
+
+.signup-btn, .login-btn, .btn-create, .btn-delete {
+  width: 81%;
+  /* margin-left: 10%; */
+  margin-top: 5px;
+  margin-bottom: 15px;
+  /* justify-content: center; */
+  padding: 10px;
+  font-size: 18px;
+}
+
+/* PROFILE PAGE / BLOG ENTRY ---------------- */
+.welcome, .current {
+  margin-left: 20%;
+}
+
+.card-profile {
+  max-width: 60%;
+  background-color:  lightblue;
+  margin-left: 20%;
+  margin-bottom: 40px;
+}
+
+.header-profile {
+  width: 100%;
+  background-color: rgb(26, 26, 84);
+}
+
+.header-profile h3{
+  margin-left: 5%;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-size: 24px;
+}
+
+.profile-entry {
+  margin-top: 5px;
+  margin-left: 10%;
+  padding: 6px;
+  font-size: 18px;
 }
