--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,36 +1,47 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+<div class="container-login">
+  <div class="header-login">
+    <h3>Login</h3>
+  </div>
 
     <form class="form login-form">
       <div class="form-group">
         <label for="username-login">username:</label>
+        <br />
         <input class="form-input" type="text" id="username-login" />
       </div>
       <div class="form-group">
         <label for="password-login">password:</label>
+        <br />
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="login-btn" type="submit">login</button>
       </div>
     </form>
   </div>
+</div>
 
-  <div class="col-md-6">
-    <h2>Signup</h2>
+
+<div class="container-login">
+  <div class="header-login">
+    <h3>Signup</h3>
+  </div>
 
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">username:</label>
+        <br />
         <input class="form-input" type="text" id="username-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
+        <br />
+        <label for="password-signup">*must be 8 characters*</label>
+        <br />
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="signup-btn" type="submit">signup</button>
       </div>
     </form>
   </div>
