--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,16 +1,15 @@
-<div class="row">
-  <div class="col-auto">
+<div class="welcome">
     <h2>Welcome, {{username}}!</h2>
   </div>
-</div>
 
-<div class="row mt-4">
-  <div class="col-md-6">
+<div class="card-profile">
+  <div class="header-profile">
     <h3>Create a New Blog Entry:</h3>
-
+  </div>
     <form class="form new-project-form">
       <div class="form-group">
         <label for="project-title">Blog Title:</label>
+        <br />
         <input class="form-input" type="text" id="project-title" name="project-title" />
       </div>
       {{!-- <div class="form-group">
@@ -19,30 +18,30 @@
       </div> --}}
       <div class="form-group">
         <label for="project-desc">Entry:</label>
+        <br />
         <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-create">Create</button>
       </div>
     </form>
-  </div>
+</div>
 
   {{#if projects.length}}
-  <div class="col-md-6 project-list">
-    <h3>Current Blogs:</h3>
-
-    {{#each projects as |project|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
+    <div class="card-profile">
+      <div class="header-profile">
+        <h3>Current Blogs:</h3>
+      </div>
+      {{#each projects as |project|}}
+      <div class="profile-entry">
         <h4><a href="/project/{{project.id}}">{{project.title}}</a></h4>
+          <div class="col-md-4">
+            <button class="btn btn-sm btn-delete" data-id="{{project.id}}">Delete</button>
+          </div>
       </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
-      </div>
+      {{/each}}
     </div>
-    {{/each}}
-  </div>
-  {{/if}}
+    {{/if}}
 </div>
 
 <script src="./js/profile.js"></script>
