--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,19 +1,27 @@
-<div class="text-center">
-  <h2>{{title}}</h2>  
-  <p>{{description}}</p>
-  <p>Created by {{user.username}} on {{format_date date_created}}</p>
-<div>
+<div class="card-project">
+  <div class="header-project">
+    <h2>{{title}}</h2>  
+    <p>Created by {{user.username}} on {{format_date date_created}}</p>
+  </div>
 
-<div>
-  {{#if logged_in}}
-  <form class="new-comment-form" data-projectid={{id}}>
+    <div class="footer">
+      <p>{{description}}</p>
     <div>
-      <textarea class="comment-entry" id="comment_description" name="entry"></textarea>
-    </div>
-    <div>
-      <button class="submit-btn" type="submit">Add Comment</button>
-    </div>
-  </form>
+</div>
+
+    {{#if logged_in}}
+
+    <form class="new-comment-form" data-projectid={{id}}>
+      <div>
+        <label for="comment">Comment:</label>
+        <br/>
+        <textarea class="comment-entry" id="comment_description" name="entry"></textarea>
+      </div>
+      <div>
+        <button class="submit-btn" type="submit">Add Comment</button>
+      </div>
+    </form>
+  </div>
 
   {{/if}}
 </div>
