--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -30,9 +30,12 @@
   <div class="single-comment">
     <p>{{comment_description}}</p>
     <p>Created by {{user.username}} on {{format_date date_created}}</p>
-  </div>
+  </div>{{/each}}
+  
+  {{#if logged_in}}
 <button class="delete-btn" type="submit">Delete Comment</button>
-  {{/each}}
+  {{/if}}
+  
 
 <script src="/js/profile.js"></script>
 <script src="/js/comment.js"></script>
