--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -22,7 +22,7 @@
         <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-create">Create</button>
+        <button type="submit" class="btn-create">Create</button>
       </div>
     </form>
 </div>
@@ -35,9 +35,9 @@
       {{#each projects as |project|}}
       <div class="profile-entry">
         <h4><a href="/project/{{project.id}}">{{project.title}}</a></h4>
-          <div class="col-md-4">
+          {{!-- <div class="col-md-4"> --}}
             <button class="btn btn-sm btn-delete" data-id="{{project.id}}">Delete</button>
-          </div>
+          {{!-- </div> --}}
       </div>
       {{/each}}
     </div>
